--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -12,4 +12,4 @@ jobs:
   calling-called:
     uses: rameshkharat/called/.github/workflows/main.yml@main
   calling-called-workflow-2:
-    uses: rameshkharat/called/.github/workflows/main.yml@main
+    uses: rameshkharat/called-workflow-2/.github/workflows/main.yml@main
