--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -10,14 +10,17 @@ jobs:
         run: echo Hello, world-Looking Good!
 
   calling-called:
-    needs: do-it
+  
     uses: rameshkharat/called/.github/workflows/main.yml@main
     
   calling-called-workflow-2:
-    needs: calling-called
+  
     uses: rameshkharat/called-workflow-2/.github/workflows/main.yml@main
     
   calling-called-workflow-with-secrets:
     needs: calling-called-workflow-2
     uses: rameshkharat/called-workflow-with-secrets/.github/workflows/main.yml@main
+    with:
+        DOCKER_USER: ${{secrets.DOCKER_USER}}
+        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
     
