--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -21,6 +21,6 @@ jobs:
     needs: calling-called-workflow-2
     uses: rameshkharat/called-workflow-with-secrets/.github/workflows/main.yml@main
     with:
-        DOCKER_USER: ${{secrets.DOCKER_USER}}
-        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+        DOCKER_USER: ${{DOCKER_USER}}
+        DOCKER_PASSWORD: ${{DOCKER_PASSWORD}}
     
