--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -16,11 +16,14 @@ jobs:
   calling-called-workflow-2:
   
     uses: rameshkharat/called-workflow-2/.github/workflows/main.yml@main
-    
-  calling-called-workflow-with-secrets:
-    needs: calling-called-workflow-2
-    uses: rameshkharat/called-workflow-with-secrets/.github/workflows/main.yml@main
-    with:
-        DOCKER_USER: ${{DOCKER_USER}}
-        DOCKER_PASSWORD: ${{DOCKER_PASSWORD}}
+   
+        
+  calling-called-workflow-with-secrets:      
+    runs-on: ubuntu-latest
+    steps:
+      - uses: rameshkharat/called-workflow-with-secrets/.github/workflows/main.yml@main
+      - name: docker login
+        env:
+          DOCKER_USER: ${{secrets.DOCKER_USER}}
+          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
     
