--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -1,4 +1,8 @@
 name: Reusable Workflow user
+env:
+  DOCKER_USER: ${{secrets.DOCKER_USER}}
+  DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+    
 on:
   workflow_dispatch
 jobs:
@@ -19,11 +23,6 @@ jobs:
    
         
   calling-called-workflow-with-secrets:      
-    runs-on: ubuntu-latest
-    steps:
-      - uses: rameshkharat/called-workflow-with-secrets/.github/workflows/main.yml@main
-      - name: docker login
-        env:
-          DOCKER_USER: ${{secrets.DOCKER_USER}}
-          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-    
+     uses: rameshkharat/called-workflow-with-secrets/.github/workflows/main.yml@main
+     
+        
