--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -22,7 +22,13 @@ jobs:
     uses: rameshkharat/called-workflow-2/.github/workflows/main.yml@main
    
         
-  calling-called-workflow-with-secrets:      
-     uses: rameshkharat/called-workflow-with-secrets/.github/workflows/main.yml@main
+  calling-called-workflow-with-secrets:
+    runs-on: ubuntu-latest
+    steps:
+    - run: |
+       echo $DOCKER_USER
+       echo DOCKER_PASSWORD
+      
+    # uses: rameshkharat/called-workflow-with-secrets/.github/workflows/main.yml@main
      
         
