--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -23,12 +23,11 @@ jobs:
    
         
   calling-called-workflow-with-secrets:
+    name: example1 
     runs-on: ubuntu-latest
     steps:
-    - run: |
-       echo $DOCKER_USER
-       echo $DOCKER_PASSWORD
-      
-    # uses: rameshkharat/called-workflow-with-secrets/.github/workflows/main.yml@main
-     
+    -  uses: rameshkharat/called-workflow-with-secrets/.github/workflows/main.yml@main
+       with:
+          username: $((inputs.username))
+          token: ${{secrets.token}}     
         
