--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Run a one-line script
-        run: echo Hello, world-Looking Good!
+        run: echo Hello, world-Looking Good1!
 
   calling-called:
   
