--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -22,7 +22,7 @@ jobs:
     uses: rameshkharat/called-workflow-with-secrets/.github/workflows/main.yml@main
     with:
       image_name: idlisamosa
-      tag: $HITHUB_RUN_NUMBER
+      tag: $GITHUB_RUN_NUMBER
     secrets:
       DOCKER_USER: ${{secrets.DOCKER_USER}}
       DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
